examples/test/testpolicy19790.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19790
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key0: value31
      key6: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value31
          key41: value41
      podSelector:
        matchLabels:
          key28: value43
          key35: value44
